--- a/ASMC/View/OperationView.xaml
+++ b/ASMC/View/OperationView.xaml
@@ -4,46 +4,78 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ASMC.View"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:behavior="clr-namespace:ASMC.Common.Behavior;assembly=ASMC.Common"
+             xmlns:asmc="clr-namespace:ASMC"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <TreeView ItemsSource="{Binding UserItemOperation, Mode=TwoWay}">
-            <TreeView.ItemTemplate>
-                <HierarchicalDataTemplate  ItemsSource="{Binding Nodes}">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Orientation="Horizontal">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TreeView ItemsSource="{Binding UserItemOperation, Mode=TwoWay}">
+                <dxmvvm:Interaction.Behaviors>
+                    <behavior:BindableSelectedItemBeheavior SelectItem ="{Binding Path=SelectItemTest, RelativeSource={RelativeSource AncestorType={x:Type local:OperationView}}, Mode=TwoWay}" />
+                </dxmvvm:Interaction.Behaviors>
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate  ItemsSource="{Binding Nodes}">
+                        <StackPanel Orientation="Horizontal"   >
+
                             <CheckBox IsChecked="{Binding Path=IsCheked}"
                                       HorizontalAlignment="Left"
-                                      VerticalAlignment="Center" IsThreeState="True">
-                                <CheckBox.Resources>
-                                    <Style TargetType="CheckBox">
-                                        <Style.Triggers>
-                                            <Trigger Property="IsChecked" Value="{x:Null}">
-                                                <Setter Property="Visibility" Value="Collapsed" />
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </CheckBox.Resources>
-                            </CheckBox>
-                            <TextBlock Grid.Column="2" Text="{Binding Path= Name}" />
+                                      VerticalAlignment="Center"  Visibility="{Binding IsManual, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                            <TextBlock Text="{Binding Path= Name}"  />
+
                         </StackPanel>
-                    </Grid>
-                </HierarchicalDataTemplate>
-                <!--<DataTemplate>
+
+                    </HierarchicalDataTemplate>
+                    <!--<DataTemplate>
                     <CheckBox
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Content="{Binding Path= Name}" />
                 </DataTemplate>-->
-            </TreeView.ItemTemplate>
-            <!--<i:Interaction.Behaviors>
-                      <behavior:BindableSelectedItemBeheavior SelectItem ="{Binding SelectionItemOperation, Mode=TwoWay}" />
-                    </i:Interaction.Behaviors>-->
-        </TreeView>
+                </TreeView.ItemTemplate>
+
+            </TreeView>
+            <DataGrid Grid.Column="1" ItemsSource="{Binding SelectItemTest.Data.Rows}" AutoGenerateColumns="True"/>
+            <!--<ListView ItemsSource="{Binding SelectItemTest.Data.Rows}">
+                <ListView.View>
+                    <GridView  AllowsColumnReorder="False">
+                        <GridViewColumn Header="Тип СИ"   >
+                            <GridViewColumn.CellTemplate >
+                                <DataTemplate>
+                                    <TextBlock TextWrapping="Wrap"  Margin="5,10,5,10" Text="{Binding Type}"    />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Госреестр"  >
+                            <GridViewColumn.CellTemplate >
+                                <DataTemplate>
+                                    <TextBlock TextWrapping="Wrap"  Margin="5,10,5,10" Text="{Binding Grsi}"    />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Диапазон"  >
+                            <GridViewColumn.CellTemplate >
+                                <DataTemplate>
+                                    <TextBlock TextWrapping="Wrap"  Margin="5,10,5,10" Text="{Binding Range}"    />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn Header="Характеристика точности" >
+                            <GridViewColumn.CellTemplate >
+                                <DataTemplate>
+                                    <TextBlock TextWrapping="Wrap"  Margin="5,10,5,10" Text="{Binding Accuracy}"    />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>-->
+        </Grid>
+        
     </StackPanel>
 </UserControl>
