Добавлен пример вызова пользовательского окна в Oper5VoltPulsation.
Добавлена поддержка формирования текста из таблицы для протокола
     var regInsTextByMark = new Regex(@"(^ITBm\w.+)");
                var regInsTextByReplase = new Regex(@"(^RepT\w.+)");
                var regInTableByMark = new Regex(@"(^ITabBm\w.+)");
                var regFillTableByMark = new Regex(@"(^FillTabBm\w.+)");

--- a/ASMC/View/WizardView.xaml
+++ b/ASMC/View/WizardView.xaml
@@ -33,6 +33,7 @@
     <ui:ImageService x:Name="ImageService"/>
     <ui2:MessageBoxService/>
     <ui2:TaskMessageService/>
+    <ui2:WindowService x:Name="FreeWindow"/>
   </dxmvvm:Interaction.Behaviors>
   <StackPanel>
     <Menu Margin="0,0,0,10">
