--- a/ASMC/View/OperationView.xaml
+++ b/ASMC/View/OperationView.xaml
@@ -29,49 +29,19 @@
                                 <TextBlock.Style>
                                     <Style TargetType="TextBlock">
                                         <Style.Triggers>
-                                            <MultiDataTrigger>
-                                                <MultiDataTrigger.Conditions>
-                                                    <Condition Binding="{Binding Path= IsWork}"  Value="false"/>
-                                                    <Condition Binding="{Binding Path= IsGood}"  Value="{x:Null}"/>
-                                                </MultiDataTrigger.Conditions>
-                                                <MultiDataTrigger.Setters>
-                                                    <Setter Property="Foreground" Value="Black"/>
-                                                </MultiDataTrigger.Setters>
-                                            </MultiDataTrigger>
-                                            <MultiDataTrigger>
-                                                <MultiDataTrigger.Conditions>
-                                                    <Condition Binding="{Binding Path= IsWork}"  Value="true"/>
-                                                    <Condition Binding="{Binding Path= IsGood}"  Value="{x:Null}"/>
-                                                </MultiDataTrigger.Conditions>
-                                                <MultiDataTrigger.Setters>
-                                                    <Setter Property="Foreground" Value="Blue"/>
-                                                </MultiDataTrigger.Setters>
-                                            </MultiDataTrigger>
-                                            <MultiDataTrigger>
-                                                <MultiDataTrigger.Conditions>
-                                                    <Condition Binding="{Binding Path= IsWork}"  Value="false"/>
-                                                    <Condition Binding="{Binding Path= IsGood}"  Value="true"/>
-                                                </MultiDataTrigger.Conditions>
-                                                <MultiDataTrigger.Setters>
-                                                    <Setter Property="Foreground" Value="Green"/>
-                                                </MultiDataTrigger.Setters>
-                                            </MultiDataTrigger>
-                                            <MultiDataTrigger>
-                                                <MultiDataTrigger.Conditions>
-                                                    <Condition Binding="{Binding Path= IsWork}"  Value="false"/>
-                                                    <Condition Binding="{Binding Path= IsGood}"  Value="false"/>
-                                                </MultiDataTrigger.Conditions>
-                                                <MultiDataTrigger.Setters>
-                                                    <Setter Property="Foreground" Value="Red"/>
-                                                </MultiDataTrigger.Setters>
-                                            </MultiDataTrigger>
-                                          
-                                            <!--<DataTrigger Binding="{Binding Path= IsWork, Mode=OneWay}" Value="true">
+                                            
+                                            <DataTrigger Binding="{Binding Path= IsGood}"  Value="false">
+                                                <Setter Property="Foreground" Value="Red"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Path= IsGood}"  Value="true">
+                                                <Setter Property="Foreground" Value="Green"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Path= IsGood}"  Value="{x:Null}">
+                                                <Setter Property="Foreground" Value="Black"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Path= IsWork}"  Value="true">
                                                 <Setter Property="Foreground" Value="Blue"/>
                                             </DataTrigger>
-                                            <DataTrigger Binding="{Binding Path= IsWork, Mode=OneWay}" Value="false">
-                                                <Setter Property="Foreground" Value="Black"/>
-                                            </DataTrigger>-->
                                         </Style.Triggers>
                                     </Style>
                                    
