--- a/ASMC/Themes/ValueContentControl.xaml
+++ b/ASMC/Themes/ValueContentControl.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:utils="clr-namespace:AP.Utils;assembly=AP.Utils">
+                    xmlns:utils="clr-namespace:AP.Utils;assembly=AP.Utils"
+                    xmlns:ui="clr-namespace:ASMC.Common.UI;assembly=ASMC.Common">
 
   <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
@@ -8,7 +9,7 @@
         Data="M 0,4 L 4,0 L 8,4 z"
         Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}"/>
 
-  <Style TargetType="utils:ValueContentControl">
+  <Style TargetType="ui:ValueContentControl">
     <Setter Property="Orientation" Value="Vertical" />
     <Setter Property="Padding" Value="0,0,0,4" />
     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -36,7 +37,7 @@
                 </StackPanel>
               </Label>
               <DataTemplate.Triggers>
-                <DataTrigger Binding="{Binding IsRequired, RelativeSource={RelativeSource AncestorType=utils:ValueContentControl}}" Value="True">
+                <DataTrigger Binding="{Binding IsRequired, RelativeSource={RelativeSource AncestorType=ui:ValueContentControl}}" Value="True">
                   <Setter TargetName="Req" Property="Text" Value="*" />
                   <Setter TargetName="Req" Property="ToolTip" Value="" />
                 </DataTrigger>
@@ -46,7 +47,7 @@
         </Setter>
         <Setter Property="Template">
           <Setter.Value>
-            <ControlTemplate TargetType="utils:ValueContentControl">
+            <ControlTemplate TargetType="ui:ValueContentControl">
               <Border Background="{TemplateBinding Background}"
                       BorderBrush="{TemplateBinding BorderBrush}"
                       BorderThickness="{TemplateBinding BorderThickness}">
@@ -130,7 +131,7 @@
                 </StackPanel>
               </Label>
               <DataTemplate.Triggers>
-                <DataTrigger Binding="{Binding IsRequired, RelativeSource={RelativeSource AncestorType=utils:ValueContentControl}}" Value="True">
+                <DataTrigger Binding="{Binding IsRequired, RelativeSource={RelativeSource AncestorType=ui:ValueContentControl}}" Value="True">
                   <Setter TargetName="Req" Property="Text" Value="*" />
                   <Setter TargetName="Req" Property="ToolTip" Value="" />
                 </DataTrigger>
@@ -140,7 +141,7 @@
         </Setter>
         <Setter Property="Template">
           <Setter.Value>
-            <ControlTemplate TargetType="utils:ValueContentControl">
+            <ControlTemplate TargetType="ui:ValueContentControl">
               <Grid Margin="{TemplateBinding Padding}">
                 <Grid.RowDefinitions>
                   <RowDefinition Height="Auto" />
