--- a/ASMC.Core/View/InputTableControl.xaml
+++ b/ASMC.Core/View/InputTableControl.xaml
@@ -33,7 +33,7 @@
               </ItemsControl.ItemContainerStyle>
               <ItemsControl.ItemTemplate>
                   <DataTemplate>
-                          <Grid >
+                          <Grid Margin="5" >
                               <Grid.RowDefinitions>
                                   <RowDefinition />
                                   <RowDefinition />
