--- a/ASMC/View/SettingView.xaml
+++ b/ASMC/View/SettingView.xaml
@@ -10,9 +10,9 @@
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
   </UserControl.Resources>
     <StackPanel>
-   
-      
-    <GroupBox Header="Обслуживаемое средство">
+
+
+        <GroupBox Header="Обслуживаемое средство" Visibility="{DXBinding 'TestDevice.Count != 0', Converter={StaticResource BooleanToVisibilityConverter}}">
       <ListView ItemsSource="{Binding TestDevice}" >
         <ListView.View>
           <GridView  AllowsColumnReorder="False">
@@ -48,7 +48,7 @@
         </ListView.View>
       </ListView>
     </GroupBox>
-    <GroupBox Header="Средства используемые для метрологического контроля">
+        <GroupBox Header="Средства используемые для метрологического контроля" Visibility="{DXBinding 'ControlDevice.Count !=0', Converter={StaticResource BooleanToVisibilityConverter}}">
       <ListView ItemsSource="{Binding ControlDevice}" >
         <ListView.View>
           <GridView  AllowsColumnReorder="False">
