Переработан выбор приборов и их настройка

--- a/ASMC/View/SettingView.xaml
+++ b/ASMC/View/SettingView.xaml
@@ -19,14 +19,18 @@
             <GridViewColumn Header="Имя устройства" Width="150"  >
               <GridViewColumn.CellTemplate >
                 <DataTemplate>
-                  <ComboBox Margin="5,10,5,10" MinWidth="100" ItemsSource="{Binding Path=Name}" SelectedItem="{Binding SelectedName}"/>
+                    <StackPanel>
+                    <ComboBox Margin="5,10,5,10" MinWidth="100" ItemsSource="{Binding Path=Devices}" DisplayMemberPath="UserType" SelectedItem="{Binding SelectedDevice}" Visibility="{DXBinding 'Devices.Count gt 1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                    <TextBlock Text="{Binding SelectedDevice.UserType}" Visibility="{DXBinding 'Devices.Count==1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                    </StackPanel>
                 </DataTemplate>
               </GridViewColumn.CellTemplate>
             </GridViewColumn>
             <GridViewColumn Header="Строка подключения" Width="150" >
               <GridViewColumn.CellTemplate >
                 <DataTemplate>
-                  <ComboBox Margin="5,10,5,10"  MinWidth="100" ItemsSource="{Binding Path=AddresDivece}" SelectedItem="{Binding StringConnect}"/>
+                                    <ComboBox Margin="5,10,5,10"  MinWidth="100" ItemsSource="{Binding Path=AddresDivece}" SelectedItem="{Binding StringConnect}" />
+
                 </DataTemplate>
               </GridViewColumn.CellTemplate>
             </GridViewColumn>
@@ -55,7 +59,10 @@
             <GridViewColumn Header="Имя устройства" Width="150"  >
               <GridViewColumn.CellTemplate >
                 <DataTemplate>
-                  <ComboBox Margin="5,10,5,10" MinWidth="100" ItemsSource="{Binding Path=Name}" SelectedItem="{Binding SelectedName}"/>
+                    <StackPanel>
+                                        <ComboBox Margin="5,10,5,10" MinWidth="100" ItemsSource="{Binding Path=Devices}" DisplayMemberPath="UserType" SelectedItem="{Binding SelectedDevice}" Visibility="{DXBinding 'Devices.Count gt 1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                    <TextBlock Text="{Binding SelectedDevice.UserType}" Visibility="{DXBinding 'Devices.Count==1', Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                                        </StackPanel>
                 </DataTemplate>
               </GridViewColumn.CellTemplate>
             </GridViewColumn>
